added reports; fixes #67
