# backend/src/api.ts
@@ -5,11 +5,13 @@ import createUserApiRouter from './routes/api/v1/user';
 import createUserSessionsApiRouter from './routes/api/v1/usersession';
 import createLabelApiRouter from './routes/api/v1/label';
 import createValueApiRouter from './routes/api/v1/value';
+import createReportApiRouter from './routes/api/v1/report';
 
 export function createApiRouter(config: ConfigType): Router {
   const router = Router();
   router.use('/auth', createAuthApiRouter(config));
   router.use('/label', createLabelApiRouter());
+  router.use('/report', createReportApiRouter());
   router.use('/user', createUserApiRouter());
   router.use('/usersession', createUserSessionsApiRouter());
   router.use('/value', createValueApiRouter());
