# backend/src/routes/api/v1/report.ts
@@ -1,15 +1,14 @@
 import {Router} from 'express';
 import {isAuthenticatedMiddleware} from '../../../middleware/auth';
-import ValueController from '../../../controllers/api/v1/ValueController';
+import ReportController from '../../../controllers/api/v1/ReportController';
 
-export default function createValueApiRouter(): Router {
-  const controller = new ValueController();
+export default function createReportApiRouter(): Router {
+  const controller = new ReportController();
   const router = Router();
   router.get('/', isAuthenticatedMiddleware, controller.list.bind(controller));
   router.get('/:id', isAuthenticatedMiddleware, controller.getById.bind(controller));
   router.post('/', isAuthenticatedMiddleware, controller.add.bind(controller));
   router.put('/', isAuthenticatedMiddleware, controller.update.bind(controller));
-  router.put('/report/:reportId', isAuthenticatedMiddleware, controller.updateBatchByReportId.bind(controller));
   router.delete('/:id', isAuthenticatedMiddleware, controller.remove.bind(controller));
   return router;
 };
